[gd_scene load_steps=5 format=3 uid="uid://demiwiwylf8lr"]

[ext_resource type="Theme" uid="uid://csyr5ylftdp4l" path="res://assets/new_theme.tres" id="1_2nco3"]
[ext_resource type="Script" path="res://Main.gd" id="1_yefip"]
[ext_resource type="Texture2D" uid="uid://6anh5hsj1oso" path="res://UI/open-folder_delapouite.png" id="3_yiawc"]
[ext_resource type="PackedScene" uid="uid://cnvf0hqp64eje" path="res://sys_msn/messages_container.tscn" id="4_5tca4"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_2nco3")
script = ExtResource("1_yefip")

[node name="GraphEdit" type="GraphEdit" parent="."]
unique_name_in_owner = true
process_thread_group = 1
process_thread_group_order = 0
process_thread_messages = 0
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
right_disconnects = true

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -230.5
offset_right = 230.5
offset_bottom = 40.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="ProjNameEdit" type="LineEdit" parent="PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Project Name"

[node name="OpenProjMenu" type="MenuButton" parent="PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Projects"
flat = false

[node name="SaveProjectBtn" type="Button" parent="PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Save"

[node name="OpenUserFolder" type="Button" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
icon = ExtResource("3_yiawc")
icon_alignment = 1
expand_icon = true

[node name="Button" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
text = "dev_clear"

[node name="AddNodeMenu" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 742.0
offset_top = 156.0
offset_right = 913.0
offset_bottom = 398.0
theme_type_variation = &"FloatingPanel"

[node name="MarginContainer" type="MarginContainer" parent="AddNodeMenu"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="AddNodeMenu/MarginContainer"]
layout_mode = 2

[node name="AddNode" type="PanelContainer" parent="AddNodeMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="AddNodeMenu/MarginContainer/VBoxContainer/AddNode"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="AddNodeMenu/MarginContainer/VBoxContainer/AddNode/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="AddNodeMenu/MarginContainer/VBoxContainer/AddNode/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Class"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ClassNodeButton" type="Button" parent="AddNodeMenu/MarginContainer/VBoxContainer/AddNode/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Class"

[node name="RefClassButton" type="Button" parent="AddNodeMenu/MarginContainer/VBoxContainer/AddNode/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Reference"

[node name="AddFuncNode" type="PanelContainer" parent="AddNodeMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="AddNodeMenu/MarginContainer/VBoxContainer/AddFuncNode"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="AddNodeMenu/MarginContainer/VBoxContainer/AddFuncNode/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="AddNodeMenu/MarginContainer/VBoxContainer/AddFuncNode/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Function"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FuncImplemButton" type="Button" parent="AddNodeMenu/MarginContainer/VBoxContainer/AddFuncNode/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Implementation"

[node name="FuncRetButton" type="Button" parent="AddNodeMenu/MarginContainer/VBoxContainer/AddFuncNode/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Return"

[node name="AddStateMachineNode" type="PanelContainer" parent="AddNodeMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="AddNodeMenu/MarginContainer/VBoxContainer/AddStateMachineNode"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="AddNodeMenu/MarginContainer/VBoxContainer/AddStateMachineNode/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="AddNodeMenu/MarginContainer/VBoxContainer/AddStateMachineNode/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "State Machine"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AddSMButton" type="Button" parent="AddNodeMenu/MarginContainer/VBoxContainer/AddStateMachineNode/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Create"

[node name="CloseAddPanelButton" type="Button" parent="AddNodeMenu"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "x"

[node name="MessagesContainer" parent="." instance=ExtResource("4_5tca4")]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 16.0
offset_bottom = -16.0
grow_vertical = 2

[connection signal="scroll_offset_changed" from="GraphEdit" to="." method="_on_graph_edit_scroll_offset_changed"]
[connection signal="about_to_popup" from="PanelContainer/HBoxContainer/OpenProjMenu" to="." method="_on_open_proj_menu_about_to_popup"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/SaveProjectBtn" to="." method="_on_save_project_btn_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/OpenUserFolder" to="." method="_on_open_user_folder_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/Button" to="." method="clear_grid"]
